Added a check for detection of implicit this

--- a/clang-tools-extra/clang-tidy/kokkos/CMakeLists.txt
+++ b/clang-tools-extra/clang-tidy/kokkos/CMakeLists.txt
@@ -2,6 +2,7 @@ set(LLVM_LINK_COMPONENTS support)
 
 add_clang_library(clangTidyKokkosModule
   ImplicitThisCaptureCheck.cpp
+  KokkosMatchers.cpp
   KokkosTidyModule.cpp
 
   LINK_LIBS
